force-app/main/default/objects/Account/fields/Saldo_pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_pendiente__c</fullName>
    <inlineHelpText>Saldo vencido</inlineHelpText>
    <label>Saldo pendiente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>