force-app/main/default/objects/Account/fields/Saldo_vivo__c.field-meta.xml
<CustomField>
    <fullName>Saldo_vivo__c</fullName>
    <label>Saldo vivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>