force-app/main/default/objects/Account/fields/Segmento1__c.field-meta.xml
<CustomField>
    <fullName>Segmento1__c</fullName>
    <defaultValue>&quot;Depósito&quot;</defaultValue>
    <label>Segmento1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTOGAS - Autogas</fullName>
            </value>
            <value>
                <fullName>CAP - Canalizado Publico</fullName>
            </value>
            <value>
                <fullName>DIGR - Distribuidor al por menor GLP a granel</fullName>
            </value>
            <value>
                <fullName>DIPC - Distribuidor por menor GLP canalizado</fullName>
            </value>
            <value>
                <fullName>DOM - Doméstico</fullName>
            </value>
            <value>
                <fullName>GENERAL - Cliente NO GAS</fullName>
            </value>
            <value>
                <fullName>PC - Canalizado</fullName>
            </value>
            <value>
                <fullName>PLATINO - Tanque PZ</fullName>
            </value>
            <value>
                <fullName>PROF - Profesional</fullName>
            </value>
            <value>
                <fullName>SPOT - Tanque propio</fullName>
            </value>
            <value>
                <fullName>Canalizado</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
                <default>true</default>
                <label>Depósito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>