force-app/main/default/objects/Account/fields/Sincronizada__c.field-meta.xml
<CustomField>
    <fullName>Sincronizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de tipo check para saber si la cuenta está sincronizada</description>
    <label>Sincronizada</label>
    <type>Checkbox</type>
</CustomField>