force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En gas</fullName>
            </value>
            <value>
                <fullName>En ID (faltaDatoContrato)</fullName>
            </value>
            <value>
                <fullName>En ID (Instalar)</fullName>
            </value>
            <value>
                <fullName>pdteConfBaja</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
            <value>
                <fullName>Retirado/Precintado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>