force-app/main/default/objects/Account/fields/Status_baja__c.field-meta.xml
<CustomField>
    <fullName>Status_baja__c</fullName>
    <label>Status baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente confirmar baja</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>