force-app/main/default/objects/Account/fields/Status_del_prospecto__c.field-meta.xml
<CustomField>
    <fullName>Status_del_prospecto__c</fullName>
    <description>Campo para marcar calcular el status prima_LNG_cuando se convierte el prospecto.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5.- Offer</fullName>
                <default>true</default>
                <label>5.- Offer</label>
            </value>
            <value>
                <fullName>6.- Customer</fullName>
            </value>
            <value>
                <fullName>0.- Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>