force-app/main/default/objects/Account/fields/Tanque_recuperado__c.field-meta.xml
<CustomField>
    <fullName>Tanque_recuperado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcado=Si Desmarcado=No</inlineHelpText>
    <label>Tanque recuperado</label>
    <type>Checkbox</type>
</CustomField>