force-app/main/default/objects/Account/fields/Tiempo__c.field-meta.xml
<CustomField>
    <fullName>Tiempo__c</fullName>
    <label>% Tiempo</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>