force-app/main/default/objects/Account/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de registro del prospect asociado</description>
    <inlineHelpText>Tipo de registro del prospect asociado</inlineHelpText>
    <label>Tipo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>