force-app/main/default/objects/Account/fields/Tipo_cliente_cambio_titular__c.field-meta.xml
<CustomField>
    <fullName>Tipo_cliente_cambio_titular__c</fullName>
    <inlineHelpText>Se usa para cambios de titular</inlineHelpText>
    <label>Tipo cliente cambio titular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propietario</fullName>
            </value>
            <value>
                <fullName>Inquilino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>