force-app/main/default/objects/Account/fields/Tipo_tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_tarifa__c</fullName>
    <label>Tipo tarifa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Doméstica</fullName>
            </value>
            <value>
                <fullName>Polinómica</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>