force-app/main/default/objects/Account/fields/tipus_ocult__c.field-meta.xml
<CustomField>
    <fullName>tipus_ocult__c</fullName>
    <description>NO BORRRAR , SU USA EN EL CAMPO PROPIETARIO INTERNO</description>
    <formula>case( Segmento1__c ,
&quot;Depósito&quot;,&quot;GLP&quot;,
&quot;Canalizado&quot;,&quot;GLP&quot;,
&quot;Spot&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tipus_ocult</label>
    <type>Text</type>
</CustomField>