force-app/main/default/objects/Account/fields/Ultima_sync_detalle_clientes__c.field-meta.xml
<CustomField>
    <fullName>Ultima_sync_detalle_clientes__c</fullName>
    <description>Indica la ultima fecha en la que el cliente o algúna dirección de entrega ha sido modificada mediante Nav2sfdc_ActualizacionDiariaClientes</description>
    <label>Última sync. detalle clientes</label>
    <type>DateTime</type>
</CustomField>