force-app/main/default/objects/Account/fields/URL_Link_informa__c.field-meta.xml
<CustomField>
    <fullName>URL_Link_informa__c</fullName>
    <label>URL Link informa</label>
    <type>Url</type>
</CustomField>