force-app/main/default/objects/Account/fields/Uso__c.field-meta.xml
<CustomField>
    <fullName>Uso__c</fullName>
    <label>Uso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autogas</fullName>
            </value>
            <value>
                <fullName>Calefacción</fullName>
            </value>
            <value>
                <fullName>Climatización</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Generar electricidad</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Oxicorte</fullName>
            </value>
            <value>
                <fullName>Procesos Industriales</fullName>
            </value>
            <value>
                <fullName>Vapor</fullName>
            </value>
            <value>
                <fullName>Agua caliente sanitaria</fullName>
            </value>
            <value>
                <fullName>Kit carretillas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>