force-app/main/default/objects/Account/fields/Usuario_web_cifrado__c.field-meta.xml
<CustomField>
    <fullName>Usuario_web_cifrado__c</fullName>
    <description>copia de usuario web y copiados los mismos datos a fecha 27/03/2024</description>
    <label>Usuario web cifrado</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>