force-app/main/default/objects/Account/fields/Usuario_Web_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Web_Clientes__c</fullName>
    <description>Nuevo campo utilizado para el login en webClientes</description>
    <label>Usuario Web Clientes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>