force-app/main/default/objects/Account/fields/Ventas_DL__c.field-meta.xml
<CustomField>
    <fullName>Ventas_DL__c</fullName>
    <label>Ventas (DL)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>