force-app/main/default/objects/Account/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <formula>TEXT(Owner.Zona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona</label>
    <type>Text</type>
</CustomField>