force-app/main/default/objects/Account/validationRules/detalle_cambio_otros.validationRule-meta.xml
<ValidationRule>
    <fullName>detalle_cambio_otros</fullName>
    <active>true</active>
    <description>Si detalle cambio  = otros hacer obligatorio el campo observaciones baja</description>
    <errorConditionFormula>AND (ISPICKVAL( Detalle_cambio__c,&quot;Otros&quot;),ISBLANK( Observaciones_baja__c))</errorConditionFormula>
    <errorDisplayField>Observaciones_baja__c</errorDisplayField>
    <errorMessage>Debes rellenar el campo Observaciones baja</errorMessage>
</ValidationRule>