force-app/main/default/objects/Account/validationRules/Evitar_creacion_cuentas_personales.validationRule-meta.xml
<ValidationRule>
    <fullName>Evitar_creacion_cuentas_personales</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR($User.ProfileId = &apos;00eD00000012rRb&apos;,$User.ProfileId = &apos;00eD000000166N6&apos;), RecordType.Id = &apos;01257000000kgIr&apos;)</errorConditionFormula>
    <errorMessage>Ya no se pueden crear cuentas personales</errorMessage>
</ValidationRule>