force-app/main/default/objects/Account/listViews/Clientes_no_existentes.listView-meta.xml
<ListView>
    <fullName>Clientes_no_existentes</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Cliente</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012D0000000345E</value>
    </filters>
    <label>Clientes potenciales</label>
    <language>es</language>
    <sharedTo>
        <group>Administradors</group>
        <group>Atenci_n_al_cliente</group>
        <group>Comercial</group>
        <group>Marketing</group>
    </sharedTo>
</ListView>