force-app/main/default/objects/Account/listViews/Partner.listView-meta.xml
<ListView>
    <fullName>Partner</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Codigo_proveedor__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Busqueda_proveedor__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Partners</label>
    <sharedTo>
        <group>Administradors</group>
        <group>Comercial</group>
        <group>Marketing</group>
    </sharedTo>
</ListView>