force-app/main/default/objects/Account/listViews/Vista_proviencies.listView-meta.xml
<ListView>
    <fullName>Vista_proviencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>tipus_ocult__c</columns>
    <columns>Gestor_interno__c</columns>
    <columns>Provincia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_Navision__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Vista gestor interno y provincia</label>
    <language>es</language>
</ListView>