force-app/main/default/objects/Account/listViews/X4_B.listView-meta.xml
<ListView>
    <fullName>X4_B</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Status_baja__c</columns>
    <columns>Estado_baja__c</columns>
    <columns>Motivo_baja__c</columns>
    <columns>Fecha_baja__c</columns>
    <columns>Fecha_cierre_baja__c</columns>
    <columns>Ficha_de_baja_numero__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_baja__c</field>
        <operation>equals</operation>
        <value>Pendiente confirmar baja,Anulado</value>
    </filters>
    <label>Gestión de bajas</label>
    <language>es</language>
</ListView>